# sony-clip-rename

./: README.md  pyproject.toml
app/: __init__.py  __main__.py  rename_utils.py  task_pipeline.py  xml_parser.py
app/res/: specs_mapping.toml
src/: clip_info_core.py  clip_info_map.py  main.py  rename_utils.py
