[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sony-clip-rename"
description = "Rename Sony camera clips to a more human-readable format."
requires-python = ">=3.11"
authors = [
    { name = "Teii Ri", email = "teiiri@outlook.com" },
]
readme = "README.md"
keywords = ["sony", "camera", "rename", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Assemblers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.scripts]
sony-clip-rename = "app.__main__:main"

[project.urls]
Homepage = "https://github.com/davidli218/sony-clip-rename"
Issues = "https://github.com/davidli218/sony-clip-rename/issues"

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[tool.setuptools.packages.find]
include = ["app"]
namespaces = false
